--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,6 @@
 ---
+title: "Index"
+output: html_document
 ---
 
 Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus 
