--- a/04_import_export.Rmd
+++ b/04_import_export.Rmd
@@ -6,7 +6,7 @@ output:
     toc_float: true
 ---
 
-```{r packages, echo=FALSE, results='hide'}
+```{r, echo=FALSE, results='hide', include=F}
 library(here)
 ```
 V této sekci se zaměříme na to, jak importovat a exportovat data v R a probereme základní praktiky organizace dat.
@@ -96,6 +96,18 @@ Data z SPSS je možné importovat pomocí funkce read_spss().
 Pro import dat ze softwaru Stata slouží funkce `read_dta()` a pro SAS funkce `read_sas()`.
 Pro data z Excelu je nutné nainstalovat samostatný balíček `readxl` (který je součástí `tidyverse`) a využít funkci `read_excel()`.
 
+U importu dat v SPSS formátu se ještě zastavíme.
+Přestože balíček `haven` dokáže importovat .sav soubory, má dvě omezení. Zaprvé je nutné ručně specifikovat encoding .sav souborů pocházejících z české verze SPSS (argument `encoding = "Windows-1250"`) a 
+zadruhé proměnné načítá v atypickém `labelled` formátu. V mnoha případech je pohodlnější použít balíček `foreign`
+
+Balíček `foregin` nejen lépe zvládá český encoding, ale i automaticky převede labely na hodnoty. Data cvvm_cerven_2019.sav můžeme nahrát pomocí funkce:
+
+```{r, eval=F}
+cvvm = read.spss("cvvm_cerven_2019.sav", to.data.frame = TRUE, reencode = TRUE)
+```
+
+Argument `to.data.frame = TRUE` importuje data jako dataframe (jinak bude výsledkem list) a argument `reencode = TRUE` převede encoding tak, aby byly všechny znaky zobrazeny správně.
+
 ## Import dat z internetu
 
 Data nemusíme nutně importovat pouze z našeho počítače.
@@ -103,7 +115,7 @@ Pokud jsou data ke stažení na internetu, je možné je stáhnout do R rovnou.
 Například data o zemích jsou uložena na Githubu na adrese https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/countries.csv.
 Pro jejich stažení stačí použít:
 
-```{import online example}
+```{r import online example, eval=F}
 countries = read.csv("https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/countries.csv")
 ```
 
@@ -114,7 +126,7 @@ Funkce pro export zpravidla začínájí slovem `write`, případně `save`.
 Pro uložení dat v .csv formátu slouží funkce `write.csv()`, která potřebuje dva argumenty.
 `x` je jméno objektu, který chceme exportovat a `file` je cesta, kam má být objekt uložen:
 
-```{write csv example}
+```{r write csv example, eval=F}
 write.csv(x = countries, file = "C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries_backup.csv")
 ```
 
@@ -125,7 +137,7 @@ Encoding je možné nastavit pomocí argumentu `fileEncoding` (standardně `UTF-
 
 Uložení do .rds probíhá pomocí funkce `saveRDS()`. Stejně jako v předchozím případě je nutné specifikovat, jaký objekt má být exportován (argument `object`) a cesta, kam má být soubor uložen (argument `file`):
 
-```{writing rds backup example}
+```{r writing rds backup example, eval=F}
 write.csv(object = countries, file = "C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries_backup.rds")
 ```
 
@@ -143,14 +155,14 @@ getwd()
 
 Pokud bychom chtěli nastavit nový pracovní adresář, použijeme funkci `setwd()` (*set working directory*):
 
-```{set wd example}
+```{r set wd example, eval=F}
 setwd("C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data)
 ```
 
 Od této chvíle, pokud neřekneme jinak, bude všechny soubory hledat a ukládat do výše zmíněné složky.
 Například, pokud bychom chtěli importovat .csv soubor, který ve složce je v pracovním adresáři, stačí:
 
-```{wd data import}
+```{r wd data import, eval=F}
 countries = read.csv("countries.csv")
 ```
 
@@ -203,7 +215,7 @@ Naštěstí existuje způsob, jak nastavit pracovní adresář dynamicky, tak ab
 
 nejdříve je nutné si balíček `here` stáhnout:
 
-```{here install}
+```{r here install, eval=F}
 install.packages("here")
 ```
 
@@ -233,7 +245,7 @@ To znamená, že bez ohledu na to, kam složku s Rstudio projekt přesuneme, ať
 
 Po tom, co jsme aktivovaly balíček `here` pomocí `library(here)`, můžeme použí funkci `here()` uvnitř funkcí pro export a import dat:
 
-```{here import example}
+```{r here import example, eval=F}
 countries = read.csv(here("countries.csv"))
 ```
 
