--- a/atestation.Rmd
+++ b/atestation.Rmd
@@ -1,13 +1,11 @@
 ---
-title: "Atestace"
+title: "Podmínky atestace"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-# Atestace
 
 Pro úspěšné splnění předmětu je nutné splnit následující úkol:
 
@@ -30,3 +28,5 @@ Případně stáhnout rovnou v R pomocí funkce:
 ```{r csv data, eval=FALSE}
 cvvm = read.csv("https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/cvvm_cerven_2019.csv")
 ```
+
+Dotazník s popisem otázek je možné stejně jako data stáhout v Datovém archivu, případně [zde](https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/documentation/V1906.pdf).
