--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,14 @@
 ---
-title: "Index"
+title: "Anotace kurzu"
 output: html_document
 ---
 
-Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus Sylabus sylabus 
+**Vyučující**: Jaromír Mazák PhD, Mgr. Aleš Vomáčka
+
+Kurz je úvodem do programovacího jazyka R vyvinutého pro statistickou analýzu dat. V kurzu není předpokládána předchozí znalost jazyka R, ale podmínkou je základní znalost statistiky a výhodou jsou předchozí zkušenosti s analýzou dat. Minimálním vstupním předpokladem pro je absolvování kurzů prvního ročníku Statistika 1 (ASG100117), Seminář ke statistice 1 (ASG100118) a doporučujeme si ho tedy nechat spíše do 2. ročníku bakalářského studia.
+
+V kurzu vycházíme z moderního přístupu k analýze dat v R pomocí vývojového prostředí R Studio a "gramatiky" Tidyverse. Tento přístup dnes mezi uživatelskou komunitou pravděpodobně převažuje.
+
+Učit se R je běh na dlouhou trať. Je to cesta, která znamená mnohem větší časovou investici než zvládnutí softwaru s GUI, jako je například SPSS. Odměnou je mnohem větší flexibilita a v ruce univerzální nástroj pro zpracování dat, analýzu, vizualizaci, ale i programování a automatizaci. Přestože v kurzu se tak daleko nedostaneme, v R je dnes díky dostupným knihovnám a nástrojům možné vytvářet také interaktivní grafické aplikace, webové stránky, prezentace a kromě standardní statistické analýzy jsou dostupné také nástroje tzv. strojového učení. Tento kurz má smysl především pro ty studenty, kteří se chtějí ve své sociologické dráze zaměřovat kvantitativně a kteří jsou připraveni k samostudiu a dalšímu rozvoji skromných základů, které jim kurz nabídne.
+
+Účast na výuce předpokládá vlastní notebook s připojením k internetu. 
